introduced ToAvroLogicalTypeConverter interface for extendable avro logical type conversions